--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+
 
 # Fortran module files
 *.mod
@@ -24,7 +24,6 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
@@ -32,3 +31,5 @@
 *.app
 *.sdf
 Graphics Final/.vs/
+Graphics Final/Robotron.VC.db
+Graphics Final/Robotron.opensdf
