--- a/Graphics Final/Robotron/Robotron.vcxproj.filters
+++ b/Graphics Final/Robotron/Robotron.vcxproj.filters
@@ -131,6 +131,12 @@
     <None Include="Basic.vs">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="ToonShader.fs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="ToonShader.vs">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bullet.cpp">
