--- a/Graphics Final/Robotron/Robotron.vcxproj.filters
+++ b/Graphics Final/Robotron/Robotron.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="HeightGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ToonShadedModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Coord_System_Texture_Quad.fs">
@@ -185,6 +188,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HeightGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ToonShadedModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
